<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/green"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            android:layout_marginTop="23dp"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/backbutton"
            android:src="@drawable/backbuton"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="110dp"
            />
    </LinearLayout>


    <EditText
        android:id="@+id/login"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"
        android:hint="@string/nameuser"
        android:inputType="text"
        android:layout_marginTop="224dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:paddingLeft="10dp"
        android:paddingTop="3dp"
        android:textColorHint="@color/gray"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:paddingLeft="10dp"
        android:paddingTop="3dp"
        android:textColorHint="@color/gray"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:paddingTop="3dp"
        android:textColorHint="@color/gray"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="@string/reg"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:onClick="Reg"/>
        />
</LinearLayout>